--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
 
     <section>
         <h1>Instrucciones.</h1>
-        <p>Dar click en cualquier parte de la cuadricula, hazlo cuadro por cuadro para formar una linea de 3 en horizontal y 
-            vertical, nunca en diagonal, para dar vida a las células. Si hay menos de 3 celulas en vertical/horizontal, 
-            el organismo muere. Una vez las dibujaste, puedes dar play y los organismos se reproducirán.
-            Puedes dar click cerca de dos celulas, estando en PLAY, para dar vida a los organismos, usa el botón borrar
-            o refresca la página para comenzar nuevo juego, avanzar para ver cuadro por cuadro o play para reproducir. 
+        <p>Da click en cualquier parte de la cuadricula, bibuja cuadro por cuadro para formar una linea de 3 en horizontal o 
+            vertical, nunca en diagonal, para dar vida a las células. Si hay menos de 3 celulas, el organismo muere. 
+            Da play y los organismos se reproducirán. Da click cerca de dos celulas, estando en PLAY, para dar vida a los organismos muertos.
+            Borrar para reiniciar, avanzar para ver cuadro por cuadro. 
         </p>
     </section>
 
