--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 </head>
 <body>
     
-    <div id="contenedor-tablero">
-    </div>
-
     <!------------BUTTONS.------------>
 
     <div class="contenedor-botones">
@@ -26,7 +23,6 @@
             <i title="Borrar celulas" class="fa-solid fa-eraser" onclick="limpiar()"></i>
         </div>
     </div>
-
     <!--------------------------INTRUCTIONS-------------------->
 
     <section>
@@ -37,6 +33,14 @@
             Borrar para reiniciar, avanzar para ver cuadro por cuadro. 
         </p>
     </section>
+
+    <!--------------------CONTAINER------------------------------------------>
+
+    <div id="contenedor-tablero">
+    </div>
+
+
+    
 
     <script src="./JS/index.js"></script>
 </body>
